--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@noble/hashes": "^2.0.1",
+    "nostr-tools": "^2.19.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
